--- a/sign-up.html
+++ b/sign-up.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="./homepage.html">AUTOMART<sup>&reg;</sup></a>
+        <a href="./index.html">AUTOMART<sup>&reg;</sup></a>
         <img src="../UI/pictures/2000px-Bentley_logo.svg.png" alt="automart-logo"/>
         </div>
         <div class="info">
