--- a/buy-car.html
+++ b/buy-car.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="./homepage.html">AUTOMART<sup>&reg;</sup></a>
+      <a href="./index.html">AUTOMART<sup>&reg;</sup></a>
       <img
         src="../UI/pictures/2000px-Bentley_logo.svg.png"
         alt="automart-logo"
@@ -87,7 +87,7 @@
       </div>
       <div class="footer-right">
         <h3>
-          Copyright © 2021. Automart by <a href="./homepage.html">Doyin </a>
+          Copyright © 2021. Automart by <a href="./index.html">Doyin </a>
         </h3>
 
         <p>
