--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="logo">
         <a href="./homepage.html">AUTOMART<sup>&reg;</sup></a>
         <img
-          src="../UI/pictures/2000px-Bentley_logo.svg.png"
+          src="./UI/pictures/2000px-Bentley_logo.svg.png"
           alt="automart-logo"
         />
       </div>
