--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="logo">
         <a href="./homepage.html">AUTOMART<sup>&reg;</sup></a>
         <img
-          src="./UI/pictures/2000px-Bentley_logo.svg.png"
+          src="https://www.carlogos.org/logo/Bentley-logo-1920x1080.png"
           alt="automart-logo"
         />
       </div>
